feat:wabapi test

--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/MainLayout.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/MainLayout.razor
@@ -1,5 +1,11 @@
 ﻿@inherits LayoutComponentBase
-
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+@* Needed for dialogs *@
+<MudDialogProvider />
+@* Needed for snackbars *@
+<MudSnackbarProvider />
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
