--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/_Imports.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/_Imports.razor
@@ -9,4 +9,6 @@
 @using SearchPartyWeb
 @using SearchPartyWeb.Components
 
+@using MudBlazor
 @using Core.ApiExecutor;
+@using SearchPartyWeb.Core.Authentication
