--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Pages/Home.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Pages/Home.razor
@@ -1,7 +1,16 @@
 ﻿@page "/"
-
+@rendermode InteractiveAuto
+@inject IAuthService _authService
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+<MudButton Variant="Variant.Filled" OnClick="@(()=>Login())">Default</MudButton>
+@code{
+
+    async Task Login()
+    {
+        await _authService.Login("user1@test.com", "Qwe123@");
+    }
+
+}
