--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/_Imports.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/_Imports.razor
@@ -8,7 +8,17 @@
 @using Microsoft.JSInterop
 @using SearchPartyWeb
 @using SearchPartyWeb.Components
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using System.Text.Json
 
 @using MudBlazor
 @using Core.ApiExecutor;
 @using SearchPartyWeb.Core.Authentication
+@using Microsoft.AspNetCore.Components.Authorization
+@using SearchPartyWeb.Components.PageComponents
+@using SearchPartyWeb.Components.PageComponents.HomePageComponents
+@using SearchPartyWeb.Components.PageComponents.HomePageComponents.Dialogs
+@using SearchPartyWeb.Core.ProfileRepository
+@using Blazored.LocalStorage;
+@using SearchPartyWeb.Core.Utils
+@using SearchPartyWeb.Core.Models
