--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/NavMenu.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/NavMenu.razor
@@ -1,29 +1,9 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">SearchPartyWeb</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
+﻿<MudPaper Width="250px" Class="py-3" Elevation="0">
+    <MudNavMenu>
+        <MudDivider Class="my-2"/>
+        <MudNavLink Href="/">Личный кабинет</MudNavLink>
+        <MudNavLink Href="/teamsBoard">Список команд</MudNavLink>
+        <MudNavLink Href="/profilesBoard" >Список проифилей</MudNavLink>
+        <MudNavLink Href="/chat">Чат</MudNavLink>
+    </MudNavMenu>
+</MudPaper>
