--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/NavMenu.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
         <MudDivider Class="my-2"/>
         <MudNavLink Href="/">Личный кабинет</MudNavLink>
         <MudNavLink Href="/teamsBoard">Список команд</MudNavLink>
-        <MudNavLink Href="/profilesBoard" >Список проифилей</MudNavLink>
-        <MudNavLink Href="/chat">Чат</MudNavLink>
+        <MudNavLink Href="/ProfilesBoard" >Список проифилей</MudNavLink>
+        <MudNavLink Href="/invites">Запросы</MudNavLink>
     </MudNavMenu>
 </MudPaper>
