--- a/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Pages/Account/ReistrationPage.razor
+++ b/SearchPartyFront/SearchPartyWeb/SearchPartyWeb/SearchPartyWeb/Components/Pages/Account/ReistrationPage.razor
@@ -1,5 +1,12 @@
-﻿@page "/reistrationPage"
-<h3>ReistrationPage</h3>
+﻿@page "/registration"
+<AuthorizeView>
+    <NotAuthorized>
+        
+            <h3>ReistrationPage</h3>
+      
+    </NotAuthorized>
+
+</AuthorizeView>
 
 @code {
     
